[gd_scene load_steps=3 format=3 uid="uid://0kiblap0u8q"]

[ext_resource type="PackedScene" uid="uid://bpebv3bpdb1k6" path="res://Components/PokemonDisplayMini.tscn" id="1_ocbom"]
[ext_resource type="Script" uid="uid://dnf1we2sb5mva" path="res://Scenes/CombatTest.gd" id="1_paw3h"]

[node name="CombatTest" type="Node2D"]
script = ExtResource("1_paw3h")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 540.0
offset_bottom = 960.0
color = Color(0.00784314, 0.364706, 0.403922, 1)

[node name="BtnClose" type="Button" parent="."]
offset_left = 214.0
offset_top = 918.0
offset_right = 264.0
offset_bottom = 949.0
text = "Close"

[node name="Label" type="Label" parent="."]
offset_left = 245.0
offset_right = 292.0
offset_bottom = 23.0
text = "Battle
"

[node name="pdmL1" parent="." instance=ExtResource("1_ocbom")]
position = Vector2(2, 45)

[node name="pdmR1" parent="." instance=ExtResource("1_ocbom")]
position = Vector2(331, 47)

[node name="Label2" type="Label" parent="."]
offset_left = 243.0
offset_top = 59.0
offset_right = 283.0
offset_bottom = 82.0
text = "VS"

[node name="lblWinner1" type="Label" parent="."]
offset_left = 165.0
offset_top = 82.0
offset_right = 380.0
offset_bottom = 105.0
horizontal_alignment = 1

[node name="pdmL3" parent="." instance=ExtResource("1_ocbom")]
position = Vector2(-2, 230)

[node name="pdmR3" parent="." instance=ExtResource("1_ocbom")]
position = Vector2(329, 237)

[node name="Label3" type="Label" parent="."]
offset_left = 239.0
offset_top = 244.0
offset_right = 279.0
offset_bottom = 267.0
text = "VS"

[node name="lblWinner3" type="Label" parent="."]
offset_left = 161.0
offset_top = 267.0
offset_right = 376.0
offset_bottom = 290.0
horizontal_alignment = 1

[node name="pdmL2" parent="." instance=ExtResource("1_ocbom")]
position = Vector2(3, 142)

[node name="pdmR2" parent="." instance=ExtResource("1_ocbom")]
position = Vector2(326, 143)

[node name="Label4" type="Label" parent="."]
offset_left = 244.0
offset_top = 156.0
offset_right = 284.0
offset_bottom = 179.0
text = "VS"

[node name="lblWinner2" type="Label" parent="."]
offset_left = 166.0
offset_top = 179.0
offset_right = 381.0
offset_bottom = 202.0
horizontal_alignment = 1

[node name="pdmL4" parent="." instance=ExtResource("1_ocbom")]
position = Vector2(-2, 323)

[node name="pdmR4" parent="." instance=ExtResource("1_ocbom")]
position = Vector2(331, 334)

[node name="Label6" type="Label" parent="."]
offset_left = 239.0
offset_top = 337.0
offset_right = 279.0
offset_bottom = 360.0
text = "VS"

[node name="lblWinner4" type="Label" parent="."]
offset_left = 161.0
offset_top = 360.0
offset_right = 376.0
offset_bottom = 383.0
horizontal_alignment = 1

[node name="pdmL5" parent="." instance=ExtResource("1_ocbom")]
position = Vector2(3, 422)

[node name="pdmR5" parent="." instance=ExtResource("1_ocbom")]
position = Vector2(331, 431)

[node name="Label7" type="Label" parent="."]
offset_left = 244.0
offset_top = 436.0
offset_right = 284.0
offset_bottom = 459.0
text = "VS"

[node name="lblWinner5" type="Label" parent="."]
offset_left = 166.0
offset_top = 459.0
offset_right = 381.0
offset_bottom = 482.0
horizontal_alignment = 1

[node name="pdmL6" parent="." instance=ExtResource("1_ocbom")]
position = Vector2(2, 517)

[node name="pdmR6" parent="." instance=ExtResource("1_ocbom")]
position = Vector2(328, 527)

[node name="Label8" type="Label" parent="."]
offset_left = 243.0
offset_top = 531.0
offset_right = 283.0
offset_bottom = 554.0
text = "VS"

[node name="lblWinner6" type="Label" parent="."]
offset_left = 165.0
offset_top = 554.0
offset_right = 380.0
offset_bottom = 577.0
horizontal_alignment = 1

[connection signal="pressed" from="BtnClose" to="." method="Close"]
